# src/routes/admin.js
@@ -5,5 +5,6 @@ const adminController = require('../controllers/adminController');
 
 router.use(authMiddleware);
 router.get('/users', adminOnly, adminController.listUsers);
+router.delete('/delete-users/:id', adminOnly, adminController.deleteUser);
 
 module.exports = router;
